# clrs-implementations

./: LICENSE  clrs-implementations.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
