name:                clrs-implementations
version:             0.1.0.0
synopsis:            Some implementations of data structures and algorithms from CLRS
homepage:            http://github.com/rossng/clrs-implementations
license:             Apache-2.0
license-file:        LICENSE
author:              Ross Gardiner
maintainer:          ross-public@gmx.com
copyright:           2015 Ross Gardiner
category:            Algorithms
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , pretty
  default-language:    Haskell2010

executable heap-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , heap
  default-language:    Haskell2010

test-suite heap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , heap
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rossng/clrs-implementations
